fix overflow bug about bg shape

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,7 +1,7 @@
 #about {
     min-height: 65vh;
     position: relative;
-    // overflow-x: hidden !important;
+    overflow-x: hidden !important;
 
     .about-bg-shape {
         position: absolute;
